fixtures/invalid/unsupported-escape.lmk
@metadata key="bad\nescape"
Only quote and backslash escapes are valid.
